k8s/ingress-alb.yaml
# Ingress para expor o app via AWS ALB Ingress Controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-azuredevops-alb  # Nome do recurso Ingress
  annotations:
    kubernetes.io/ingress.class: alb  # Usa o ALB Ingress Controller
    alb.ingress.kubernetes.io/scheme: internet-facing  # Torna o ALB público
spec:
  rules:
    - http:
        paths:
          - path: /  # Caminho raiz da aplicação
            pathType: Prefix
            backend:
              service:
                name: eks-azuredevops-app  # Nome do serviço exposto
                port:
                  number: 80  # Porta do serviço
